--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
     <link
@@ -14,12 +15,12 @@
     <title>Projects - Christian Franco</title>
   </head>
   <body>
-    <div class="background"></div>
+    <div class="background absolute width100"></div>
 
-    <div id="header" class="header-container">
+    <div id="header" class="header-container width100">
       <header>
         <div class="logo">
-          <img
+          <img class="pointer"
             src="/assets/svg/logo.svg"
             onclick="scrollToTop()"
             alt="Personal logo"
@@ -33,7 +34,7 @@
               >
             </li>
             <li class="change-language" onclick="showLanguageMenu()">
-              <div class="lang-hover">
+              <div class="lang-hover pointer">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 16 16"
@@ -63,7 +64,7 @@
             onclick="showHideMenu()"
             aria-label="Menu toggle"
           />
-          <label class="menu-button" for="menu-toggle">
+          <label class="menu-button pointer" for="menu-toggle">
             <span></span>
           </label>
         </div>
@@ -71,8 +72,8 @@
     </div>
 
     <section id="projects" class="projects section">
-      <div class="projects-data">
-        <span class="repos"
+      <div class="projects-data flex center">
+        <span class="repos flex contrast-color width100"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             x="0px"
@@ -90,7 +91,7 @@
         <a
           href="https://github.com/c-franco?tab=repositories"
           target="_blank"
-          class="view-github"
+          class="view-github flex contrast-color width100"
           ><div class="pad-bottom underline">
             View on GitHub<svg
               width="14"
@@ -110,12 +111,12 @@
           </div>
         </a>
       </div>
-      <div class="project-list">
-        <article class="project">
+      <div class="project-list flex">
+        <article class="project flex">
           <div class="project-info project-info-right">
-            <h3 class="project-title">ShortSnap - Url shortener</h3>
-            <div class="project-container">
-              <ul class="project-stack">
+            <h3 class="project-title contrast-color">ShortSnap - Url shortener</h3>
+            <div class="project-container flex">
+              <ul class="project-stack flex">
                 <li>
                   <span class="netcore">
                     <svg
@@ -289,12 +290,12 @@
                   </span>
                 </li>
               </ul>
-              <div class="project-text">
+              <div class="project-text contrast-color">
                 A fast, lightweight, and open-source URL shortener designed for
                 quick and efficient URL management. It allows to short, unshort
                 and track URL clicks.
               </div>
-              <footer class="project-buttons">
+              <footer class="project-buttons flex">
                 <a
                   href="https://shortsnap.vercel.app/"
                   target="_blank"
@@ -343,17 +344,17 @@
             </div>
           </div>
           <div class="project-img">
-            <div class="img-border">
+            <div class="img-border flex">
               <img src="/assets/img/shortsnap.webp" alt="App image" />
             </div>
           </div>
         </article>
 
-        <article class="project">
+        <article class="project flex">
           <div class="project-info project-info-right">
-            <h3 class="project-title">CSS Storage - VSCode extension</h3>
-            <div class="project-container">
-              <ul class="project-stack">
+            <h3 class="project-title contrast-color">CSS Storage - VSCode extension</h3>
+            <div class="project-container flex">
+              <ul class="project-stack flex">
                 <li>
                   <span>
                     <svg
@@ -376,12 +377,12 @@
                   </span>
                 </li>
               </ul>
-              <div class="project-text">
+              <div class="project-text contrast-color">
                 Extension that allows you to save css selectors for reuse in any
                 project. Useful for storing media queries, animations, reusable
                 components or whatever you need.
               </div>
-              <footer class="project-buttons">
+              <footer class="project-buttons flex">
                 <a
                   class="preview"
                   href="https://marketplace.visualstudio.com/items?itemName=Breathink.css-storage"
@@ -430,17 +431,17 @@
             </div>
           </div>
           <div class="project-img">
-            <div class="img-border">
+            <div class="img-border flex">
               <img src="/assets/img/css-storage.webp" alt="" />
             </div>
           </div>
         </article>
 
-        <article class="project">
+        <article class="project flex">
           <div class="project-info project-info-right">
-            <h3 class="project-title">LinkVault - Url manager</h3>
-            <div class="project-container">
-              <ul class="project-stack">
+            <h3 class="project-title contrast-color">LinkVault - Url manager</h3>
+            <div class="project-container flex">
+              <ul class="project-stack flex">
                 <li>
                   <span>
                     <svg
@@ -533,12 +534,12 @@
                   </span>
                 </li>
               </ul>
-              <div class="project-text">
+              <div class="project-text contrast-color">
                 Android app that simplifies the management of your favorite
                 links and gives you instant access to them with just one tap.
                 Avalaible on Google Play Store.
               </div>
-              <footer class="project-buttons">
+              <footer class="project-buttons flex">
                 <a
                   class="preview"
                   href="https://play.google.com/store/apps/details?id=com.breathink.linkvault"
@@ -587,17 +588,17 @@
             </div>
           </div>
           <div class="project-img">
-            <div class="img-border">
+            <div class="img-border flex">
               <img src="/assets/img/linkvault.webp" alt="" />
             </div>
           </div>
         </article>
 
-        <article class="project">
+        <article class="project flex">
           <div class="project-info project-info-right">
-            <h3 class="project-title">Spotify Instant Search</h3>
-            <div class="project-container">
-              <ul class="project-stack">
+            <h3 class="project-title contrast-color">Spotify Instant Search</h3>
+            <div class="project-container flex">
+              <ul class="project-stack flex">
                 <li>
                   <span>
                     <svg
@@ -719,12 +720,12 @@
                   </span>
                 </li>
               </ul>
-              <div class="project-text">
+              <div class="project-text contrast-color">
                 Instant search engine for Spotify songs in a dataset with 1
                 million records. Provides filtering options to find songs
                 instantly.
               </div>
-              <footer class="project-buttons">
+              <footer class="project-buttons flex">
                 <a
                   class="preview"
                   href="https://sisnet.runasp.net/"
@@ -773,17 +774,17 @@
             </div>
           </div>
           <div class="project-img">
-            <div class="img-border">
+            <div class="img-border flex">
               <img src="/assets/img/sisnet.webp" alt="" />
             </div>
           </div>
         </article>
 
-        <article class="project">
+        <article class="project flex">
           <div class="project-info project-info-right">
-            <h3 class="project-title">christianfranco.dev</h3>
-            <div class="project-container">
-              <ul class="project-stack">
+            <h3 class="project-title contrast-color">christianfranco.dev</h3>
+            <div class="project-container flex">
+              <ul class="project-stack flex">
                 <li>
                   <span>
                     <svg
@@ -842,11 +843,11 @@
                   </span>
                 </li>
               </ul>
-              <div class="project-text portfolio">
+              <div class="project-text contrast-color portfolio width100">
                 My new personal portfolio to show my professional experience and
                 personal projects.
               </div>
-              <footer class="project-buttons">
+              <footer class="project-buttons flex">
                 <a
                   class="code"
                   href="https://github.com/c-franco/christianfranco.dev"
@@ -875,7 +876,7 @@
             </div>
           </div>
           <div class="project-img">
-            <div class="img-border">
+            <div class="img-border flex">
               <img src="/assets/img/portfolio.webp" alt="" />
             </div>
           </div>
@@ -883,13 +884,13 @@
       </div>
     </section>
 
-    <section class="footer section">
-      <div class="footer-container">
+    <section class="footer flex section">
+      <div class="footer-container flex width100">
         <span id="year"
           >© <span id="currentYear">2024 - </span>
           <a href="https://christianfranco.dev">Christian Franco</a></span
         >
-        <ul class="footer-list">
+        <ul class="footer-list flex">
           <li>
             <a
               href="https://www.linkedin.com/in/christian-franco-soto/"
