--- a/es.html
+++ b/es.html
@@ -8,10 +8,10 @@
     <script src="script.js"></script>
     <link rel="icon" href="/assets/svg/logo.svg" type="image/x-icon" sizes="any" />
     <title>Christian Franco</title>
-    <meta name="description" content="Desarrollador full-stack. +2 años de experiencia en desarrollo de software." />
+    <meta name="description" content="Desarrollador full-stack. +3 años de experiencia en desarrollo de software." />
     <meta name="author" content="Christian Franco" />
     <meta property="og:title" content="Christian Franco" />
-    <meta property="og:description" content="Desarrollador full-stack. +2 años de experiencia en desarrollo de software." />
+    <meta property="og:description" content="Desarrollador full-stack. +3 años de experiencia en desarrollo de software." />
     <meta property="og:url" content="https://christianfranco.dev/" />
     <meta property="og:site_name" content="Christian Franco" />
     <meta property="og:image" content="https://christianfranco.dev/assets/img/og-image.png" />
@@ -70,7 +70,7 @@
         <header class="info">
           <h1 class="info-title contrast-color">Hey, soy <span class="purple">Christian Franco</span></h1>
           <span class="info-subtitle">Full-Stack Developer</span>
-          <h2 class="info-text contrast-color">Desarrollador de software con un fuerte enfoque en back-end. Ubicado en España. <span class="purple">+2 años de experiencia</span> y compromiso continuo de crecimiento.</h2>
+          <h2 class="info-text contrast-color">Desarrollador de software con un fuerte enfoque en back-end. Ubicado en España. <span class="purple">+3 años de experiencia</span> y compromiso continuo de crecimiento.</h2>
           <ul class="social-media flex">
             <li>
               <a aria-label="Perfil de LinkedIn" href="https://www.linkedin.com/in/christian-franco-soto/" target="_blank">
@@ -125,7 +125,7 @@
               <div class="left-info">
                 <div class="left-container">
                   <h3>Full-Stack Developer</h3>
-                  <h4 class="contrast-color">Inorca</h4>
+                  <h4 class="contrast-color">Idrica</h4>
                   <span class="time m0p0">Agosto 2023 - Actual</span>
                 </div>
               </div>
@@ -480,7 +480,7 @@
 
           <p>
             Actualmente soy
-            <span class="purple">desarrollador full-stack</span> con un <span class="purple">fuerte enfoque en backend</span> y sólidos conocimientos en desarrollo web, con más de 2 años de experiencia en desarrollo de software.
+            <span class="purple">desarrollador full-stack</span> con un <span class="purple">fuerte enfoque en backend</span> y sólidos conocimientos en desarrollo web, con 3 años de experiencia en desarrollo de software.
           </p>
 
           <p>
