--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="script.js"></script>
     <link rel="icon" href="/assets/svg/logo.svg" type="image/x-icon" sizes="any" />
     <title>Christian Franco</title>
-    <meta name="description" content="Full-stack developer based in Spain. +2 years of experience in software development." />
+    <meta name="description" content="Full-stack developer based in Spain. +3 years of experience in software development." />
     <meta name="author" content="Christian Franco" />
     <meta property="og:title" content="Christian Franco" />
-    <meta property="og:description" content="Full-stack developer based in Spain. +2 years of experience in software development." />
+    <meta property="og:description" content="Full-stack developer based in Spain. +3 years of experience in software development." />
     <meta property="og:url" content="https://christianfranco.dev/" />
     <meta property="og:site_name" content="Christian Franco" />
     <meta property="og:image" content="https://christianfranco.dev/assets/img/og-image.png" />
@@ -72,7 +72,7 @@
           <span class="info-subtitle">Full-Stack Developer</span>
           <h2 class="info-text contrast-color">
             Software developer with a strong focus on back-end, based in Spain.
-            <span class="purple">+2 years of experience</span> and an ongoing commitment to growth.
+            <span class="purple">+3 years of experience</span> and an ongoing commitment to growth.
           </h2>
           <ul class="social-media flex">
             <li>
@@ -128,7 +128,7 @@
               <div class="left-info">
                 <div class="left-container">
                   <h3>Full-Stack Developer</h3>
-                  <h4 class="contrast-color">Inorca</h4>
+                  <h4 class="contrast-color">Idrica</h4>
                   <span class="time m0p0">August 2023 - Current</span>
                 </div>
               </div>
@@ -489,7 +489,7 @@
 
           <p>
             I am currently a
-            <span class="purple">full-stack developer</span> with a <span class="purple">strong focus on back-end</span> and solid knowledge in web development, with more than 2 years of experience in software development.
+            <span class="purple">full-stack developer</span> with a <span class="purple">strong focus on back-end</span> and solid knowledge in web development, with 3 years of experience in software development.
           </p>
 
           <p>
