Job summary update

--- a/es.html
+++ b/es.html
@@ -130,7 +130,7 @@
                 </div>
               </div>
               <div class="right-info flex contrast-color">
-                Desarrollo de aplicaciones y API REST utilizando .Net Core (C#) para el backend y Angular (TypeScript) para el frontend, empleando SQL Server y PostgreSQL para la gestión de bases de datos.
+                Desarrollo de aplicaciones y APIs REST con .NET Core (C#) para back-end y Angular (TypeScript) para front-end, utilizando SQL Server y PostgreSQL. Realización de valoración de desarrollos, analizando requerimientos, estimando tiempos y recursos necesarios. Uso de herramientas como GitLab, Postman y Jira en un entorno ágil.              
               </div>
             </div>
           </li>
