--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                 </div>
               </div>
               <div class="right-info flex contrast-color">
-                Application and REST API development using .Net Core (C#) for the backend and Angular (TypeScript) for the frontend, using SQL Server and PostgreSQL for database management.
-              </div>
+                Development of applications and REST APIs with .NET Core (C#) for back-end and Angular (TypeScript) for front-end, using SQL Server and PostgreSQL. Performing development assessment, analyzing requirements, estimating time and resources needed. Use of tools such as GitLab, Postman and Jira in an agile environment.              </div>
             </div>
           </li>
           <li>
